--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,13 @@ version: 2
 jobs:
   build:
     machine: true
-    steps:
+    steps:|
       - checkout
-      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run: docker build -t poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} -f Dockerfile .
-      - run: docker run -it poldracklab/pydeface pytest pydeface
-      - run: docker tag poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} poldracklab/pydeface:latest
-      - run: docker push poldracklab/pydeface
+      - run:
+            name: Docker Deploy
+            command: |
+               docker login -u $DOCKER_USER -p $DOCKER_PASS
+               docker build -t poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} -f Dockerfile .
+               docker run -it poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} pytest pydeface
+               docker tag poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} poldracklab/pydeface:latest
+               docker push poldracklab/pydeface
