--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,31 @@ jobs:
     steps:
       - checkout
       - run:
-            name: Docker Deploy
-            command: |
-               docker login -u $DOCKER_USER -p $DOCKER_PASS
-               docker build -t poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} -f Dockerfile .
-               docker run -it poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} pytest pydeface
-               docker tag poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} poldracklab/pydeface:latest
-               docker push poldracklab/pydeface
+          name: Docker Bulid and Test
+          command: |
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker build -t poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} -f Dockerfile .
+            docker run -it poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} pytest /pydeface
+             
+  deploy:
+    machine: true
+    steps:
+      - checkout
+      -run:
+        name: Docker Deploy
+        command: |
+          docker tag poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} poldracklab/pydeface:latest
+          docker push poldracklab/pydeface
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
+
