--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
       - checkout
       - run:
         name: Docker Build, Test, and Deploy
+        no_output_timeout: 20m
         command: |
           docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker build -t poldracklab/pydeface:$CIRCLE_BUILD_NUM-${CIRCLE_SHA1:0:6} -f Dockerfile .
